Project SmartFactory_MVP_04_Task_Command_Evidence {
  database_type: 'PostgreSQL'
  Note: '''
  실행 흐름 그림.
  Task가 일을 정의하고, Commands가 순서대로 API 호출을 만들며,
  Evidence가 각 command의 완료 근거가 된다.
  '''
}

Table tasks {
  id bigint [pk]
  task_type text [not null, note: 'INBOUND/OUTBOUND/MOVE/RECOVERY/CHARGING']
  status text [not null, note: 'PENDING/RUNNING/PAUSED/COMPLETED/FAILED/CANCELLED/NEEDS_REVIEW']
  priority integer [not null, default: 0]
  robot_id text [ref: > robots.id]
  item_id text [ref: > items.id]
  quantity integer [not null, default: 1]
  from_location_id text [ref: > locations.id]
  to_location_id text [ref: > locations.id]
  started_at timestamptz
  finished_at timestamptz
}

Table commands {
  id bigint [pk]
  task_id bigint [ref: > tasks.id]
  robot_id text [ref: > robots.id]
  sequence_no integer [not null, note: 'task 내부 실행 순서']
  command_type text [not null, note: 'NAV_GOAL/PICK_UP/DROP_OFF/STOP/RESUME/START_CHARGING/STOP_CHARGING']
  target_system text [not null, note: 'NAV_SERVER/AI_SERVER/ROBOT_BRIDGE']
  status text [not null, note: 'PENDING/SENT/ACKED/SUCCEEDED/FAILED/TIMEOUT/CANCELLED']
  location_id text [ref: > locations.id, note: 'API 요청 합성에 사용할 목표/작업 위치']
  required_evidence_type text [note: 'NAV_REACHED/ITEM_PICKED/ITEM_PLACED/HUMAN_CLEAR']
  idempotency_key text [unique, not null]
  request_json jsonb [note: 'task/location/command 필드로 합성한 실제 API 요청 스냅샷']
  response_json jsonb

  indexes {
    (task_id, sequence_no) [unique]
  }
}

Table evidence_events {
  id bigint [pk]
  event_type text [not null, note: 'NAV_REACHED/ARUCO_DETECTED/LOAD_DETECTED/ITEM_PICKED/ITEM_PLACED/SLOT_CONFIRMED/HUMAN_DETECTED/HUMAN_CLEAR/ERROR/STATUS']
  source text [not null, note: 'global_cam_01/tb3_1_picam/nav_server/operator']
  robot_id text [ref: > robots.id]
  task_id bigint [ref: > tasks.id]
  command_id bigint [ref: > commands.id]
  location_id text [ref: > locations.id]
  confidence float8
  severity text [not null, default: 'INFO', note: 'INFO/WARN/ERROR/SAFETY']
  trusted boolean [not null, default: false]
  image_uri text
  data_json jsonb
  observed_at timestamptz
}

Table task_logs {
  id bigint [pk]
  task_id bigint [not null, ref: > tasks.id]
  robot_id text [ref: > robots.id]
  result text [not null]
  snapshot_json jsonb
  logged_at timestamptz [not null]
}

Table reservations {
  id bigint [pk]
  type text [not null, note: 'ROBOT/LOCATION/ITEM']
  status text [not null, note: 'ACTIVE/RELEASED/EXPIRED/CANCELLED']
  task_id bigint [not null, ref: > tasks.id]
  robot_id text [ref: > robots.id]
  location_id text [ref: > locations.id]
  item_id text [ref: > items.id]
}

Table robots {
  id text [pk]
  domain_id integer [not null]
  status text [not null]
}

Table items {
  id text [pk]
}

Table locations {
  id text [pk]
  type text [not null]
  status text [not null]
  approach_id text [ref: > locations.id]
  marker_id integer
}
